Bug 520028 - Download state for applications installed from the Search list doesn't reflect in the specific page for the application
Summary: Download state for applications installed from the Search list doesn't reflec...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 6.6.80
Platform: KDE Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-05-11 10:25 UTC by Samuele
Modified: 2026-05-22 14:47 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments
Screen recording of the issue (646.52 KB, video/webm)
2026-05-11 10:25 UTC, Samuele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuele 2026-05-11 10:25:11 UTC
Created attachment 192178 [details]
Screen recording of the issue

DESCRIPTION
When I look for an application to install in Discover I'm able to install it directly from the Search results list by clicking on the "↓" button for the application; this button changes into a "Stop" action, making me understand that the download is in process. During the download process, I can enter the details page for the application, but there the button to download the application doesn't reflect the fact that the download is already in process; rather, it says "Download", as if I didn't already started the process.

STEPS TO REPRODUCE
1. Search for an application in Discover
2. In the Search results list, click on the "↓" button to install an application
3. The button changes its content
4. Click on the application title to enter in the details page for the specific application

OBSERVED RESULT
The button inside the details page of the application to install it is not synchronized with the button in the Search results list

EXPECTED RESULT
The button inside the details page of the application to install it should be synchronized with the button in the Search results list 

SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2026-05-09
KDE Plasma Version: 6.6.80
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.0
Kernel Version: 7.0.3-arch1-2 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5700U with Radeon Graphics
Memory: 16 GiB of RAM (13.5 GiB usable)
Graphics Processor: AMD Radeon Graphics
Manufacturer: LENOVO
Product Name: 21A4
System Version: ThinkBook 15 G3 ACL
Comment 1 Akseli Lahtinen 2026-05-11 10:40:14 UTC
Can confirm

Operating System: KDE Linux 2026-05-10
KDE Plasma Version: 6.6.80
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.0
Kernel Version: 7.0.3-arch1-2 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 2 Bug Janitor Service 2026-05-11 22:05:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1327
Comment 3 Oliver Beard 2026-05-20 08:33:54 UTC
Git commit 02661b06847fc208788785e473e27a139c874615 by Oliver Beard.
Committed on 20/05/2026 at 08:06.
Pushed by olib into branch 'master'.

libdiscover/TransactionListener: Fix incorrect isActive

`isActive` is incorrect when `TransactionListener` is created and set to track a resource with status `SetupStatus` ("Starting").

It is not clear to me how exactly the change here fixes the issue, but the logic here is somewhat opaque and `CheckChange` is unusual.

The effective result of this is to resolve:

M  +1    -1    libdiscover/Transaction/TransactionListener.cpp

https://invent.kde.org/plasma/discover/-/commit/02661b06847fc208788785e473e27a139c874615
Comment 4 Oliver Beard 2026-05-20 08:34:08 UTC
Git commit fe32a6ede8c00501034d3b197b6bcee557c05e2b by Oliver Beard.
Committed on 20/05/2026 at 08:34.
Pushed by olib into branch 'Plasma/6.7'.

libdiscover/TransactionListener: Fix incorrect isActive

`isActive` is incorrect when `TransactionListener` is created and set to track a resource with status `SetupStatus` ("Starting").

It is not clear to me how exactly the change here fixes the issue, but the logic here is somewhat opaque and `CheckChange` is unusual.

The effective result of this is to resolve:


(cherry picked from commit 02661b06847fc208788785e473e27a139c874615)

Co-authored-by: Oliver Beard <olib141@outlook.com>

M  +1    -1    libdiscover/Transaction/TransactionListener.cpp

https://invent.kde.org/plasma/discover/-/commit/fe32a6ede8c00501034d3b197b6bcee557c05e2b