libdiscover/TransactionListener: Fix incorrect isActive

`isActive` is incorrect when `TransactionListener` is created and set to track a resource with status `SetupStatus` ("Starting").

It is not clear to me how exactly the change here fixes the issue, but the logic here is somewhat opaque and `CheckChange` is unusual.

The effective result of this is to resolve:

BUG: 520028